https://github.com/eclipse-sirius/sirius-components/issues/1231[#1231] [workbench] The workbench was depending on some tree components in order to compute the list of `TreeItemContextMenuContribution` to use in the explorer. This dependency has been removed and as a result, users of the workbench component will have to rely on the `TreeItemContextMenuContext` to provide the contributions


=== Dependency update

- [frontend] Update the format of the `package-lock.json` by moving to node 18.7.0 and npm 8.15.0. This will allow us to use the latest version of npm which comes with improvements for its workspace support. This will also help us move beyond the change in behavior of https://github.com/npm/cli/issues/4998[node 16.15.1 and npm 8.6]
- [frontend] Update the version of `jest-transform-css` used in order to fix the long standing issues of its incompatibility with the version of `postcss`` that we use. We will thus use `postcss 8.4.14` and `jest-transform-css 4.0.1` now
- [frontend] Remove our dependency to `ts-transform-graphql-tag` since it is not maintained and its dependencies are outdated and since it is used to lower the dependency with `graphql-tag` which we will stop using soon
- [frontend] Remove the peer dependency to `graphql-tag`. It will not be required for projects consuming Sirius Components now
- [frontend] Remove the peer dependency to `subscriptions-transport-ws`. It is not required by Sirius Components and consumers of Sirius Components will be free to switch to `graphql-ws` instead of even to not rely on web socket at all to communicate with the backend. Sirius Components itself does not need to specify how the communication with the backend will be done
- [frontend] Switch to `@apollo/client 3.6.9`, `@material-ui/core 4.12.4`, `@material-ui/icons 4.11.3`, `graphql 16.5.0`, `prop-types 15.8.1`, `sprotty 0.12.2` and `xstate 4.32.1`. Various development dependencies have also been updated such as typescript, rollup, prettier etc